--- a/BiDiB-Library.NetBiDiB.Test/BiDiB-Library.NetBiDiB.Test.csproj
+++ b/BiDiB-Library.NetBiDiB.Test/BiDiB-Library.NetBiDiB.Test.csproj
@@ -11,12 +11,13 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-    <PackageReference Include="coverlet.collector" Version="3.1.2">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
+    <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.0.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.0.1" />
+    <PackageReference Include="coverlet.collector" Version="3.2.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -29,5 +30,18 @@
   <ItemGroup>
     <ProjectReference Include="..\BiDiB-Library.NetBiDiB\BiDiB-Library.NetBiDiB.csproj" />
   </ItemGroup>
+
+	<Choose>
+		<When Condition="'$(Configuration)'=='Debug' ">
+			<ItemGroup>
+				<ProjectReference Include="..\..\Testing\BiDiB-Library.Testing\BiDiB-Library.Testing.csproj" />
+			</ItemGroup>
+		</When>
+		<When Condition="'$(Configuration)'=='Release' ">
+			<ItemGroup>
+				<PackageReference Include="org.bidib.netbidibc.Testing" Version="1.0.3" />
+			</ItemGroup>
+		</When>
+	</Choose>
 
 </Project>
