--- a/BiDiB-Library.NetBiDiB/BiDiB-Library.NetBiDiB.csproj
+++ b/BiDiB-Library.NetBiDiB/BiDiB-Library.NetBiDiB.csproj
@@ -36,7 +36,7 @@
 		</When>
 		<When Condition="'$(Configuration)'=='Release' ">
 			<ItemGroup>
-				<PackageReference Include="org.bidib.net.core" Version="1.0.5-dev.5" />
+				<PackageReference Include="org.bidib.net.core" Version="1.0.5" />
 			</ItemGroup>
 		</When>
 	</Choose>
